--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       Descarga la app oficial para analizar el pH del suelo y obtener recomendaciones de cal o azufre según tu terreno.
     </p>
 
-    <a class="btn-descargar" href="download/tierra.apk" download>
+    <a class="btn-descargar" href="download/analizador_de_tierra.apk" download>
       Descargar APK
     </a>
 
@@ -111,4 +111,5 @@
   </script>
 </body>
 </html>
+
 
