--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       Descarga la app oficial para analizar el pH del suelo y obtener recomendaciones de cal o azufre según tu terreno.
     </p>
 
-    <a class="btn-descargar" href="download/analizador.tierra.apk" download>
+    <a class="btn-descargar" href="download/analizadortierra.apk" download>
       Descargar APK
     </a>
 
@@ -116,4 +116,5 @@
   </script>
 </body>
 </html>
+
 
